feat: enhance livecodebench eval with 4x TP, improved push_to_hub
- Update livecodebench config for 4x A100 tensor parallel
- Add sampling params (temp=0.8, top_p=0.95) and pool_size=32
- Add code1.jinja prompt template with step-by-step instructions
- Enhance push_to_hub.py with --list, --dry-run, --combine modes
- Add leaderboard dataset generation with charts
- Add livecodebench-modal dependency to pyproject.toml
- Add uv.lock for reproducible dependencies

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -48,6 +48,7 @@ hub = [
 vf-eval = [
     "verifiers @ git+https://github.com/pmahdavi/verifiers.git@feature/checkpoint-resume",
     "prime",
+    "livecodebench-modal @ git+https://github.com/pmahdavi/livecodebench-modal.git",
 ]
 dev = [
     "pytest>=8.0",
@@ -75,6 +76,9 @@ me-proxy = "modal_eval.proxy:main"
 
 [tool.hatch.version]
 path = "modal_eval/__init__.py"
+
+[tool.hatch.metadata]
+allow-direct-references = true
 
 [tool.hatch.build.targets.wheel]
 packages = ["modal_eval"]
