--- a/modal_eval/config/livecodebench.yaml
+++ b/modal_eval/config/livecodebench.yaml
@@ -1,23 +1,26 @@
 # LiveCodeBench benchmark configuration
-# Uses 2x A100 data parallel for throughput
+# Uses 4x A100 tensor parallel for large models
 env_id: livecodebench-modal
 
 infra:
-  gpu: "A100-80GB:2"
+  gpu: "A100-80GB:4"
 
 vllm:
-  max_model_len: 40960
-  tensor_parallel_size: 1
-  data_parallel_size: 2
+  max_model_len: 32768
+  tensor_parallel_size: 4
+  data_parallel_size: 1
 
 sampling:
-  temperature: 1.0
-  max_tokens: 32768
+  temperature: 0.8
+  top_p: 0.95
+  max_tokens: 28672
 
 eval:
   rollouts: 2
+  max_concurrent: 32
 
-chat_template: code
+chat_template: code1
 
 env_args:
   sandbox_backend: modal
+  pool_size: 32
