--- a/modal_eval/config/aime2025.yaml
+++ b/modal_eval/config/aime2025.yaml
@@ -3,19 +3,21 @@
 env_id: aime2025
 
 infra:
-  gpu: "A100-80GB:2"
+  gpu: "A100-80GB:4"
 
 vllm:
-  max_model_len: 40960
-  tensor_parallel_size: 2
+  max_model_len: 32768
+  tensor_parallel_size: 4
   data_parallel_size: 1
 
 sampling:
-  temperature: 0.7
-  max_tokens: 32768
+  temperature: 0.8
+  top_p: 0.95
+  max_tokens: 28672
 
 eval:
   rollouts: 32
   num_examples: 30
+  max_concurrent: 48
 
-chat_template: math
+chat_template: math1
