--- a/modal_eval/config/aime2025.yaml
+++ b/modal_eval/config/aime2025.yaml
@@ -3,21 +3,22 @@
 env_id: aime2025
 
 infra:
-  gpu: "A100-80GB:4"
+  gpu: "A100-80GB:2"
 
 vllm:
   max_model_len: 32768
-  tensor_parallel_size: 4
+  tensor_parallel_size: 2
   data_parallel_size: 1
 
 sampling:
   temperature: 0.8
   top_p: 0.95
   max_tokens: 28672
+  min_tokens: 400
 
 eval:
   rollouts: 32
   num_examples: 30
-  max_concurrent: 48
+  max_concurrent: 64
 
 chat_template: math1
