--- a/modal_eval/config/livecodebench.yaml
+++ b/modal_eval/config/livecodebench.yaml
@@ -3,24 +3,25 @@
 env_id: livecodebench-modal
 
 infra:
-  gpu: "A100-80GB:4"
+  gpu: "A100-80GB:2"
 
 vllm:
   max_model_len: 32768
-  tensor_parallel_size: 4
+  tensor_parallel_size: 2
   data_parallel_size: 1
 
 sampling:
   temperature: 0.8
   top_p: 0.95
   max_tokens: 28672
+  min_tokens: 500
 
 eval:
-  rollouts: 2
-  max_concurrent: 32
+  rollouts: 4
+  max_concurrent: 48
 
 chat_template: code1
 
 env_args:
   sandbox_backend: modal
-  pool_size: 32
+  pool_size: 48
